# web-router-map

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  package-lock.json  package.json  pyproject.toml
mcp-server/: .env.example  README.md  pyproject.toml
mcp-server/src/menu_context_mcp/: __init__.py  __main__.py  config.py  db.py  observability.py  ranking.py  repository.py  schemas.py  server.py  service.py
scripts/: crawl-menu-map-from-db.py  crawl-menu-map.py  generate_and_run.py  import-menu-map-to-db.py  login-capture-auth-cookie.mjs  login-save-storage-state.py  migrate-ai-context-schema.py  refresh-storage-state.py  verify-auth-token.mjs  verify-storage-state-reuse.py
src/: __init__.py  main.py
src/api/: __init__.py  deps.py  router.py
src/config/: settings.py
src/crawler/: __init__.py  auth_crawler.py
src/infrastructure/: __init__.py  logging.py  redis_client.py  sentry_client.py
src/models/: __init__.py  app_page.py  crawl_log.py  database.py  nav_menu.py  storage_state.py  ui_container.py  ui_element.py  web_system.py
src/scheduler/: __init__.py  jobs.py  locks.py  scheduler.py
src/schemas/: __init__.py  auth.py  crawl.py  task_log.py
src_tests/: test_auth_crawler_captcha.py  test_auth_service_analysis.py  test_crawl_menu_map_script.py  test_crawl_menu_map_script_url_build.py  test_crawl_service_utils.py  test_crypto_service.py  test_database.py  test_infrastructure.py  test_logging.py  test_scheduler_jobs.py  test_settings.py  test_task_tracking.py  test_tasks_api.py  test_verify_storage_state_reuse_script.py
(+11 files in other folders)
