[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "web-router-map"
version = "0.1.0"
description = "Web router map service infrastructure."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "sqlmodel>=0.0.22,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "asyncpg>=0.29,<1.0",
  "pydantic-settings>=2.6,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-asyncio>=0.24,<1.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["src_tests"]
asyncio_mode = "auto"
pythonpath = ["."]
