[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "menu-context-mcp-server"
version = "0.1.0"
description = "Standalone MCP server for menu-map context retrieval"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastmcp>=3.0,<4.0",
  "sqlalchemy>=2.0,<3.0",
  "asyncpg>=0.29,<1.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.6,<3.0",
  "loguru>=0.7,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-asyncio>=0.24,<1.0",
]

[project.scripts]
menu-context-mcp = "menu_context_mcp.server:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
